services/igw.tf
# igw.tf

/* resource "aws_internet_gateway" "IGW" {
  vpc_id    = data.terraform_remote_state.vpc.outputs.vpc_id
  tags = {
    "Name" = "IGW"
  }
} */
